--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/style.css" />
     <title>BS Pro</title>
   </head>
-  <body>
-    <header class="fixed-top" id="HOME">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-black">
+  <body data-bs-spy="scroll" data-bs-target="#navbar-example">
+    <header class="fixed-top">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-black" id="navbar-example">
         <div class="container">
           <a
             class="navbar-brand fw-semibold text-danger fw-semibold"
@@ -33,36 +33,36 @@
             <ul class="navbar-nav ms-auto py-2">
               <li class="nav-item">
                 <a
-                  class="active nav-link text-danger fw-semibold p-0"
+                  class="active nav-link fw-semibold p-0"
                   aria-current="page"
                   href="#HOME"
                   >HOME</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-semibold p-0" href="#ABOUT"
+                <a class="nav-link fw-semibold p-0" href="#ABOUT"
                   >ABOUT</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-semibold p-0" href="#SERVICES"
+                <a class="nav-link fw-semibold p-0" href="#SERVICES"
                   >SERVICES</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-semibold p-0" href="#WORK"
+                <a class="nav-link fw-semibold p-0" href="#WORK"
                   >WORK</a
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-semibold p-0" href="#BLOG"
+                <a class="nav-link fw-semibold p-0" href="#BLOG"
                   >BLOG</a
                 >
               </li>
               <li
                 class="nav-item d-flex align-items-center position-relative drop-down"
               >
-                <a class="nav-link text-white fw-semibold p-0" href="#DROP-DOWN"
+                <a class="nav-link fw-semibold p-0" href="#DROP-DOWN"
                   >DROP DOWN</a
                 >
                 <i class="fa-solid fa-chevron-down text-white"></i>
@@ -77,7 +77,7 @@
                 </ul>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-white fw-semibold p-0" href="#CONTACT"
+                <a class="nav-link fw-semibold p-0" href="#CONTACT"
                   >CONTACT</a
                 >
               </li>
@@ -87,7 +87,7 @@
       </nav>
     </header>
     <div
-      class="main-background d-flex justify-content-center align-items-center"
+      class="main-background d-flex justify-content-center align-items-center" id="HOME"
     >
       <div class="overlay"></div>
       <div class="content text-white position-absolute">
@@ -292,7 +292,7 @@
               <div class="overflow-hidden"><img src="imgs/work-1.jpg" class="img-fluid "></div>
               <div class="content d-flex justify-content-between align-items-center mt-4 p-2 about">
                 <div class="text">
-                  <h5>Lorem impsum dolor</h4>
+                  <h5>Lorem impsum dolor</h5>
                   <p><span class="text-danger">Web Design</span> / 18 Sep. 2018</p>
                 </div>
                 <a class="add" href="#">+</a>
@@ -304,7 +304,7 @@
               <div class="overflow-hidden"><img src="imgs/work-2.jpg" class="img-fluid "></div>
               <div class="content d-flex justify-content-between align-items-center mt-4 p-2 about">
                 <div class="text">
-                  <h5>Lorem impsum dolor</h4>
+                  <h5>Lorem impsum dolor</h5>
                   <p><span class="text-danger">Web Design</span> / 18 Sep. 2018</p>
                 </div>
                 <a class="add" href="#">+</a>
@@ -316,7 +316,7 @@
               <div class="overflow-hidden"><img src="imgs/work-3.jpg" class="img-fluid "></div>
               <div class="content d-flex justify-content-between align-items-center mt-4 p-2 about">
                 <div class="text">
-                  <h5>Lorem impsum dolor</h4>
+                  <h5>Lorem impsum dolor</h5>
                   <p><span class="text-danger">Web Design</span> / 18 Sep. 2018</p>
                 </div>
                 <a class="add" href="#">+</a>
@@ -328,7 +328,7 @@
               <div class="overflow-hidden"><img src="imgs/work-4.jpg" class="img-fluid "></div>
               <div class="content d-flex justify-content-between align-items-center mt-4 p-2 about">
                 <div class="text">
-                  <h5>Lorem impsum dolor</h4>
+                  <h5>Lorem impsum dolor</h5>
                   <p><span class="text-danger">Web Design</span> / 18 Sep. 2018</p>
                 </div>
                 <a class="add" href="#">+</a>
@@ -340,7 +340,7 @@
               <div class="overflow-hidden"><img src="imgs/work-5.jpg" class="img-fluid "></div>
               <div class="content d-flex justify-content-between align-items-center mt-4 p-2 about">
                 <div class="text">
-                  <h5>Lorem impsum dolor</h4>
+                  <h5>Lorem impsum dolor</h5>
                   <p><span class="text-danger">Web Design</span> / 18 Sep. 2018</p>
                 </div>
                 <a class="add" href="#">+</a>
@@ -352,7 +352,7 @@
                 <div class="overflow-hidden"><img src="imgs/work-6.jpg" class="img-fluid "></div>
                 <div class="content d-flex justify-content-between align-items-center mt-4 p-2 about">
                   <div class="text">
-                    <h5>Lorem impsum dolor</h4>
+                    <h5>Lorem impsum dolor</h5>
                     <p><span class="text-danger">Web Design</span> / 18 Sep. 2018</p>
                   </div>
                   <a class="add" href="#">+</a>
